examples/simple/undefined/UB-CCV7-bad.output
Error: UB-CCV7
Description: conversion from pointer to integer of a value possibly unrepresentable in the integer type.
Type: Undefined behavior.
See also: C11 sec. 6.3.2.3:6, J.2:1 item 24
  at main(UB-CCV7-bad.c:7)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
