examples/simple/undefined/UB-CCV7-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. All Rights Reserved.

int main(void) {
      short x;
      short *p = &x;

      x = (short)p;

      return 0;
}
